# pare-static-mcp

./: .gitignore  README.md  pyproject.toml
src/pare_static_mcp/: config.py  contract.py  server.py  tools.py
src/pare_static_mcp/apk/: classes.py  decompile.py  graph.py  loader.py  manifest.py  sink_match.py  smali.py  state.py  strings.py  symbols.py
tests/fixtures/: locate.py
tests/integration/: test_conformance.py  test_keystore_chain.py  test_wire_risk_tier.py
tests/unit/: test_callers_of.py  test_contract.py  test_decompile_method.py  test_extract_strings.py  test_find_symbol.py  test_fixtures.py  test_graph_engine.py  test_grep_smali.py  test_list_methods.py  test_load_apk.py  test_paths_between.py  test_reachable_sinks.py  test_reachable_sinks_keystone.py  test_read_manifest.py  test_sink_match.py  test_slice_java.py
