[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pare-static-mcp"
version = "0.1.0"
description = "Static-analysis MCP worker for PARE (Android APK)"
requires-python = ">=3.12"
dependencies = [
    "androguard==4.1.3",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
pare-static-mcp = "pare_static_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pare_static_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
